NEWS - OpenPrinting CUPS Filters v1.17.6 - 2017-09-15
-----------------------------------------------------

CHANGES IN V1.17.7

	- braille: Some tools seem to emit true/false instead of
	  True/False, so let us cope with it. Thanks to Samuel
	  Thibault for this patch.
	- braille: "make uninstall" did not remove all the
	  links. Thanks to Samuel Thibault for this patch.
	- braille: Add support for embossing MusicXML files, through
	  the FreeDots transcriptor. Thanks to Samuel Thibault for
	  this patch.
	- braille: Add proper support for hardware margins on braille
	  embossers. Thanks to Samuel Thibault for this patch.
	- braille: Fix the disabling of the text margins in Index
	  graphics mode. Thanks to Samuel Thibault for this patch.
	- braille: Support for direct, structured embossing of XML and
	  XML-based file formats (like odt, docx, ...). Thanks to
	  Samuel Thibault for this patch.

CHANGES IN V1.17.6

	- braille: Embossers can only emboss integer numbers of 2x4
          cells. Thanks to Samuel Thibault for this patch.
	- braille: In Index graphical mode we need to disable the text
	  margins, since they come in earlier on the way to
	  there. Thanks to Samuel Thibault for this patch.
	- braille: Also, we should always add a 1.6mm margin for
	  taking into account the width of dots. Thanks to Samuel
	  Thibault for this patch.

CHANGES IN V1.17.5

	- libcupsfilters: In the PPD generator for driverless printing
	  renamed the "print-quality" option back to
	  "cupsPrintQuality" as the support for this option got fixed
	  in CUPS (CUPS issue #5090).
	- braille: Improvements on the braille support for bitmap
          images: Moves the graphical dot distance option to the image
          conversion group, add an option to avoid image resize, and
          make the rotation option easier by proposing to just fit
          paper instead of fitting portrait or landscape. Thanks to
          Samuel Thibault for this patch.